source package builds
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@216 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -1,7 +1,7 @@
-Source: sympy
+Source: cython
 Section: python
 Priority: optional
-Maintainer: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
+Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: Ondrej Certik <ondrej@certik.cz>
 Build-Depends: cdbs (>=0.4.41), debhelper (>= 5), python-all-dev (>=2.3.5-11)
 Build-Depends-Indep: python-central (>= 0.5)
@@ -11,7 +11,7 @@ XS-Python-Version: >=2.4
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/sympy/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/sympy/trunk/?op=log
 
-Package: python-sympy
+Package: cython
 Architecture: all 
 Depends: ${python:Depends}
 Recommends: libgtkmathview-bin, python-opengl, python-imaging, python-ctypes
