--- a/control
+++ b/control
@@ -6,7 +6,7 @@ Uploaders: Ondrej Certik <ondrej@certik.cz>
 Build-Depends: cdbs (>=0.4.41), debhelper (>= 5), python-all-dev (>=2.3.5-11)
 Build-Depends-Indep: python-central (>= 0.5)
 Standards-Version: 3.7.2
-Homepage: http://www.cython.org/
+Homepage: http://cython.org/
 XS-Python-Version: >=2.4
 Vcs-Svn: svn://svn.debian.org/svn/python-apps/packages/cython/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/python-apps/packages/cython/trunk/?op=log
