--- a/rules
+++ b/rules
@@ -12,6 +12,9 @@ configure/cython::
 clean::
 	QUILT_PATCHES=debian/patches quilt pop -a -R || test $$? = 2
 
+install/cython::
+	dh_installman debian/cython.1
+
 get-orig-tarball:
 	wget http://www.cython.org/cython-0.9.6.8.zip
 	unzip cython-0.9.6.8.zip
