misc:Depends added to Depends
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@446 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -14,7 +14,7 @@ XS-DM-Upload-Allowed: yes
 
 Package: cython
 Architecture: all 
-Depends: ${python:Depends}
+Depends: ${python:Depends}, ${misc:Depends}
 XB-Python-Version: ${python:Versions}
 Description: C-Extensions for Python
  Cython is a language that makes writing C extensions for the Python language as
