gcc added to Suggests
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@448 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -15,6 +15,7 @@ XS-DM-Upload-Allowed: yes
 Package: cython
 Architecture: all 
 Depends: ${python:Depends}, ${misc:Depends}
+Suggests: gcc
 XB-Python-Version: ${python:Versions}
 Description: C-Extensions for Python
  Cython is a language that makes writing C extensions for the Python language as
