get-orig-tarball rule fixed
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@468 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -16,7 +16,8 @@ install/cython::
 	dh_installman debian/cython.1
 
 get-orig-tarball:
-	wget http://www.cython.org/cython-0.9.6.8.zip
-	unzip cython-0.9.6.8.zip
-	tar czf cython_0.9.6.8.ds.orig.tar.gz cython-0.9.6.8
-	rm -rf cython-0.9.6.8 cython-0.9.6.8.zip
+	version=0.9.6.10;\
+	wget http://www.cython.org/Cython-$${version}.zip;\
+	unzip Cython-$${version}.zip;\
+	tar czf cython_$${version}.ds.orig.tar.gz Cython-$${version};\
+	rm -rf Cython-$${version} Cython-$${version}.zip
