--- a/control
+++ b/control
@@ -3,11 +3,10 @@ Section: python
 Priority: optional
 Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: Ondrej Certik <ondrej@certik.cz>
-Build-Depends: cdbs (>= 0.4.41), debhelper (>= 5.0.38), python (>= 2.4.4-6), quilt (>=0.46-4)
-Build-Depends-Indep: python-central (>= 0.5)
+Build-Depends: cdbs (>= 0.4.41), debhelper (>= 5.0.38), python (>= 2.4.4-6)
+Build-Depends-Indep: python-support (>= 0.7.5)
 Standards-Version: 3.7.3
 Homepage: http://cython.org/
-XS-Python-Version: >=2.4
 Vcs-Svn: svn://svn.debian.org/svn/python-apps/packages/cython/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/python-apps/packages/cython/trunk/?op=log
 XS-DM-Upload-Allowed: yes
