--- a/control
+++ b/control
@@ -5,14 +5,14 @@ Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.de
 Uploaders: Ondrej Certik <ondrej@certik.cz>
 Build-Depends: cdbs (>= 0.4.49), debhelper (>= 5.0.38), python (>= 2.4.4-6)
 Build-Depends-Indep: python-support (>= 0.7.5)
-Standards-Version: 3.7.3
+Standards-Version: 3.8.0
 Homepage: http://cython.org/
 Vcs-Svn: svn://svn.debian.org/svn/python-apps/packages/cython/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/python-apps/packages/cython/trunk/?op=log
 XS-DM-Upload-Allowed: yes
 
 Package: cython
-Architecture: all 
+Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}
 Suggests: gcc
 XB-Python-Version: ${python:Versions}
@@ -23,4 +23,4 @@ Description: C-Extensions for Python
  Cython is based on the well-known Pyrex, but supports more cutting edge
  functionality and optimizations.
  .
- Development of Cython is mainly motivated by the needs of SAGE. 
+ Development of Cython is mainly motivated by the needs of Sage.
