Preparing for an upload.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@1587 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://svn.debian.org/wsvn/python-apps/packages/cython/trunk/?op=lo
 XS-DM-Upload-Allowed: yes
 
 Package: cython
-Architecture: any
+Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}
 Suggests: gcc
 XB-Python-Version: ${python:Versions}
