switching Vcs-Browser field to viewsvn
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@1943 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -8,7 +8,7 @@ Build-Depends-Indep: python-support (>= 0.7.5)
 Standards-Version: 3.8.0
 Homepage: http://cython.org/
 Vcs-Svn: svn://svn.debian.org/svn/python-apps/packages/cython/trunk
-Vcs-Browser: http://svn.debian.org/wsvn/python-apps/packages/cython/trunk/?op=log
+Vcs-Browser: http://svn.debian.org/viewsvn/python-apps/packages/cython/trunk/
 XS-DM-Upload-Allowed: yes
 
 Package: cython
