debian/rules: remove generated files.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@3416 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -8,3 +8,6 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 
 install/cython::
 	dh_installman debian/cython.1
+
+clean::
+	rm -f Cython/Compiler/Lexicon.pickle
