Remove even more generated files.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@3418 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -10,4 +10,4 @@ install/cython::
 	dh_installman debian/cython.1
 
 clean::
-	rm -f Cython/Compiler/Lexicon.pickle
+	rm -f Cython/Compiler/Lexicon.pickle Cython/*/*.c
