--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: Python Applications Packaging Team <python-apps-team@lists.alioth.debian.org>
 Uploaders: Ondrej Certik <ondrej@certik.cz>
-Build-Depends: cdbs (>= 0.4.49), debhelper (>= 5.0.38), python (>= 2.4.4-6), python-all-dev (>= 2.4.4-6), python-support (>= 0.7.5)
+Build-Depends: cdbs (>= 0.4.49), debhelper (>= 5.0.38), python (>= 2.4.4-6), python-all-dev (>= 2.4.4-6), python-support (>= 0.7.5), python-all-dbg
 Standards-Version: 3.8.3
 Homepage: http://cython.org/
 Vcs-Svn: svn://svn.debian.org/svn/python-apps/packages/cython/trunk
@@ -27,3 +27,14 @@ Description: C-Extensions for Python
  .
  This makes Cython the ideal language for wrapping for external C libraries, and
  for fast C modules that speed up the execution of Python code.
+
+Package: cython-dbg
+Architecture: any
+Section: debug
+Priority: extra
+Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}, cython (= ${binary:Version})
+Suggests: gcc
+XB-Python-Version: ${python:Versions}
+Description: C-Extensions for Python (Debug Build of Cython)
+ This package contains Cython libraries built against versions of
+ Python configured with --pydebug.
