--- a/control
+++ b/control
@@ -13,7 +13,7 @@ XS-DM-Upload-Allowed: yes
 Package: cython
 Architecture: any
 Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}
-Suggests: gcc
+Suggests: python-dev, gcc
 XB-Python-Version: ${python:Versions}
 Description: C-Extensions for Python
  Cython is a language that makes writing C extensions for the Python language as
