* Team upload. * Un-version python in shebangs with sed. (Closes: #577143)
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@6965 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -45,6 +45,9 @@ binary-predeb/cython-dbg::
 	mkdir -p debian/cython-dbg/usr/share/doc
 	ln -s cython debian/cython-dbg/usr/share/doc/cython-dbg
 
+# Fix shebang:
+binary-fixup/cython::
+	sed -i -e '1 s,#!.*python.*,#! /usr/bin/python,' debian/cython/usr/bin/*
 
 #
 # Custom rules used above
