Fix shebang before dh_pysupport is called, to remove unnecessary Dependencies.
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@7140 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -46,7 +46,7 @@ binary-predeb/cython-dbg::
 	ln -s cython debian/cython-dbg/usr/share/doc/cython-dbg
 
 # Fix shebang:
-binary-fixup/cython::
+binary-install/cython::
 	sed -i -e '1 s,#!.*python.*,#! /usr/bin/python,' debian/cython/usr/bin/*
 
 #
