disabled assure-changelogs for this release and adjusted changelog
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@7559 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -14,7 +14,7 @@ CHANGELOGS=debian/changelogs
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
 
-install/cython:: assure-changelogs build/cython.1
+install/cython:: build/cython.1
 	dh_installman build/cython.1
 
 #
