--- a/rules
+++ b/rules
@@ -12,9 +12,33 @@ CHANGELOGS=debian/changelogs
 # Python versions
 PYDEF=$(shell pyversions -dv)
 PY2VERS=$(shell pyversions -vr)
+PY3VERS=$(shell py3versions -vr)
 
 %:
-	dh $@ --with python2 --buildsystem python_distutils
+	dh $@ --with python2,python3 --buildsystem python_distutils
+
+override_dh_auto_build:
+	dh_auto_build
+
+	: # Build for Python 3
+	set -e; for v in $(PY3VERS); do \
+	 python$$v setup.py build; \
+	 python$$v-dbg setup.py build; \
+	done
+
+override_dh_auto_install:
+	dh_auto_install
+
+	: # Install for Python 3
+	set -e; for v in $(PY3VERS); do \
+	 python$$v setup.py install --root=$(CURDIR)/debian/tmp --install-layout=deb; \
+	 python$$v-dbg setup.py install --root=$(CURDIR)/debian/tmp --install-layout=deb; \
+	done
+
+	: # Force the creation of cython3 and cygdb3 executables.
+	: # Shebang lines are fixed in override_dh_install.
+	cp debian/tmp/usr/bin/cython debian/tmp/usr/bin/cython3
+	cp debian/tmp/usr/bin/cygdb debian/tmp/usr/bin/cygdb3
 
 override_dh_installman:
 	: # Generate a manpage using help2man
@@ -31,23 +55,29 @@ override_dh_install:
 
 	: # fix shebang
 	sed -i -e '1 s,#!.*python.*,#!/usr/bin/python,' debian/cython/usr/bin/*
+	sed -i -e '1 s,#!.*python.*,#!/usr/bin/python3,' debian/cython3/usr/bin/*
 
 	: # remove files installed from cython.install that belong in -dbg
 	find $(CURDIR)/debian/cython/ -name "*_d.so" -delete
+	find $(CURDIR)/debian/cython3/ -name "*.cpython-3?d*.so" -delete
 
 	: # share -dbg and normal package doc dirs
 	rm -rf debian/cython-dbg/usr/share/doc/cython-dbg
 	dh_link -pcython-dbg usr/share/doc/cython usr/share/doc/cython-dbg
+	rm -rf debian/cython3-dbg/usr/share/doc/cython3-dbg
+	dh_link -pcython3-dbg usr/share/doc/cython3 usr/share/doc/cython3-dbg
 
 override_dh_installchangelogs:
-	dh_installchangelogs $(CHANGELOGS)/ReleaseHistory
+	dh_installchangelogs -pcython $(CHANGELOGS)/ReleaseHistory
+	dh_installchangelogs -pcython3 $(CHANGELOGS)/ReleaseHistory
 
 override_dh_installdocs: assure-changelogs
-	dh_installdocs $(CHANGELOGS)/ReleaseNotes-*
+	dh_installdocs -pcython $(CHANGELOGS)/ReleaseNotes-*
+	dh_installdocs -pcython3 $(CHANGELOGS)/ReleaseNotes-*
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	set -e; for P in $(PY2VERS); do \
+	set -e; for P in $(PY2VERS) $(PY3VERS); do \
 	 PYTHONPATH=`/bin/ls -d $(CURDIR)/build/lib.*-$$P` \
 	  /usr/bin/python$$P runtests.py --no-refnanny -v -v --work-dir=build/work-dir; \
 	done
@@ -55,6 +85,7 @@ endif
 
 override_dh_strip:
 	dh_strip -pcython --dbg-package=cython-dbg
+	dh_strip -pcython3 --dbg-package=cython3-dbg
 
 override_dh_auto_clean:
 	rm -rf build
