export HOME=$(CURDIR)/build to not rely on user's writable HOME (was triggered by some tests leading to FTBFS)
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8970 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -14,6 +14,8 @@ PYDEF=$(shell pyversions -dv)
 PY2VERS=$(shell pyversions -vr)
 PY3VERS=$(shell py3versions -vr)
 
+export HOME=$(CURDIR)/build
+
 %:
 	dh $@ --with python2,python3 --buildsystem python_distutils
 
