Restrict actions of dh_python* helpers to corresponding cython* packages (otherwise cython obtains python3 shebang)
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@8977 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -85,6 +85,13 @@ ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	done
 endif
 
+override_dh_python2:
+	dh_python2 -pcython
+
+override_dh_python3:
+	dh_python3 -pcython3
+
+
 override_dh_strip:
 	dh_strip -pcython --dbg-package=cython-dbg
 	dh_strip -pcython3 --dbg-package=cython3-dbg
