assure-changelogs upon clean to don't wait for crash at the end of build/test due to a missing changelog
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9079 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -96,7 +96,7 @@ override_dh_strip:
 	dh_strip -pcython --dbg-package=cython-dbg
 	dh_strip -pcython3 --dbg-package=cython3-dbg
 
-override_dh_auto_clean:
+override_dh_auto_clean: assure-changelogs
 	rm -rf build
 	find -name "*.py[oc]" -type f -delete
 
