Do not swallow dh_installdocs entirely + use system-wide underscore.js
git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9331 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/control
+++ b/control
@@ -72,7 +72,7 @@ Description: C-Extensions for Python 3 - debug build
 Package: cython-doc
 Architecture: all
 Section: doc
-Depends: ${misc:Depends}, libjs-jquery
+Depends: ${misc:Depends}, libjs-jquery, libjs-underscore
 Suggests: cython
 Description: C-Extensions for Python - documentation
  This package contains documentation for Cython.
