debian/rules - use explicit --link-doc for dh_installdocs
to get correct links for doc/ directories of -dbg packages

git-svn-id: svn://anonscm.debian.org/python-apps/packages/cython/trunk/debian@9618 31130ce1-1128-498b-8474-bfd1e18f06ab

--- a/rules
+++ b/rules
@@ -82,7 +82,9 @@ else
 	-rm docs/build/html/_static/jquery.js docs/build/html/_static/underscore.js
 endif
 endif
-	dh_installdocs -A debian/upstream
+	dh_installdocs --package=cython --package=cython-dbg --link-doc=cython debian/upstream
+	dh_installdocs --package=cython3 --package=cython3-dbg --link-doc=cython3 debian/upstream
+	dh_installdocs --package=cython-doc debian/upstream
 
 
 override_dh_installchangelogs:
