--- a/control
+++ b/control
@@ -30,7 +30,7 @@ Description: C-Extensions for Python
  and class attributes. This allows the compiler to generate very efficient C
  code from Cython code.
  .
- This makes Cython the ideal language for wrapping for external C libraries, and
+ This makes Cython the ideal language for wrapping external C libraries, and
  for fast C modules that speed up the execution of Python code.
 
 Package: cython-dbg
@@ -56,7 +56,7 @@ Description: C-Extensions for Python 3
  and class attributes. This allows the compiler to generate very efficient C
  code from Cython code.
  .
- This makes Cython the ideal language for wrapping for external C libraries, and
+ This makes Cython the ideal language for wrapping external C libraries, and
  for fast C modules that speed up the execution of Python code.
 
 Package: cython3-dbg
